displayを作成し、表示まで可能

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,7 +28,8 @@
 	"extensions": [
 		"ms-python.python",
 		"ms-pyright.pyright",
-		"tabnine.tabnine-vscode"
+		"tabnine.tabnine-vscode",
+		"ms-python.vscode-pylance"
 	]
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
